
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int guint ;
typedef int GValue ;
typedef int GParamSpec ;
typedef int GObject ;


 int G_OBJECT_WARN_INVALID_PROPERTY_ID (int *,int ,int *) ;

__attribute__((used)) static void areaWidget_get_property(GObject *obj, guint prop, GValue *value, GParamSpec *pspec)
{
 G_OBJECT_WARN_INVALID_PROPERTY_ID(obj, prop, pspec);
}
